update to vehicles and transactions
