# transactions/transaction.routes.js
@@ -2,9 +2,9 @@ const transactionController = require('./transactions.controllers');
 const express = require('express');
 const router = express.Router();
 
-router.get('/transactions/:id', transactionController.historyTransaction);
-//router.get('/balances', transactionController.);
-//router.post('/topup', transactionController.topUp);
+router.get('/transactions/:id', transactionController.historyPaymentTransaction);
+router.get('/topup/:id', transactionController.historyTopUpPayment)
+router.post('/topup', transactionController.topUp);
 router.post('/payment', transactionController.payTransaction)
 router.post('/confirm-pin', transactionController.confirmPin)
 
